--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,25 @@ body{
    background: radial-gradient(rgba(236, 225, 175, .1),rgba(73, 75, 71, .21),rgba(234, 236, 105, 0.21));
 }
 
+.side-navbar{
+    display: list-item;
+    text-align: right;
+    margin: 10px 10px auto auto;;
+
+}
+
+.banner,p{
+    font-size: .9375em;
+    font-family: "Open Sans",sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    margin: 0 0 .5em 0;
+}
+#bounty{
+    color: #030303;
+}
+
 .header{
     text-align: center;
     color: rgb(0, 0, 0);
@@ -25,6 +44,7 @@ h2,#shop{
     padding: 0;
     margin: 0;
     list-style: none;
+    margin-right: 400px;
 
 }
 
